Melhorias no slide e no footer

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -46,7 +46,8 @@ page-home {
         background-color:#f52626; 
         width:100px; 
         height:100px; 
-        border-radius:20px
+        border-radius:20px;
+        margin: 0 auto;
     }
     .precos:active {
         background: url("../img/precos.png") center center no-repeat;
@@ -63,7 +64,8 @@ page-home {
         background-color:#f52626; 
         width:100px; 
         height:100px; 
-        border-radius:20px
+        border-radius:20px;
+        margin: 0 auto;
     }
     .farmacias:active {
         background: url("../img/farmacias.png") center center no-repeat;
@@ -80,7 +82,8 @@ page-home {
         background-color:#f52626; 
         width:100px; 
         height:100px; 
-        border-radius:20px
+        border-radius:20px;
+        margin: 0 auto;
     }
     .pedidos:active {
         background: url("../img/pedidos.png") center center no-repeat;
